<?xml version="1.0"?>
<package format="2">
  <name>tokuron_nav</name>
  <version>0.0.0</version>
  <description>The tokuron package</description>

  <maintainer email="s19c1057fa@s.chibakoudai.jp">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- <export>
    <node name="navigation_node" pkg="your_package_name" type="navigation_node" respawn="false" output="screen"/>
  </export> -->
</package>
